# biletado-assets

./: .env  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: docker-image.yml
src/: api.rs  db.rs  main.rs
src/api/: assets_api.rs  auth.rs  buildings_api.rs  rooms_api.rs  storeys_api.rs  util.rs  validator.rs
src/db/: buildings_crud.rs  conn.rs  crud.rs  crudops.rs  dbconn.rs  models.rs  rooms_crud.rs  schema.rs
src/db/crud/: buildings_crud.rs  rooms_crud.rs  storeys_crud.rs
