[package]
name = "biletado-assets"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
diesel = { version = "1.4.8", features = ["postgres", "uuidv07"] }
dotenv = "0.15.0"
log = "0.4.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = [ "serde" ] }
