[package]
name = "biletado-assets"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
diesel = { version = "1.4.8", features = ["postgres", "uuidv07", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.14"
r2d2 = "0.8.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = [ "v4", "serde" ] }
